#+TITLE: Changelog

* Unreleased

* 0.0.0 - 2020-04-12

** Added

- =CHANGELOG.org=
- =inform7.el=
- =LICENSE= (GPL-3.0)
- =README.org=